--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body class="body">
 
   <header class="header">
-    <h1 class="header__title">🎉 おもしろプロフィール 🎉</h1>
+    <h1 class="header__title">とうえんのプロフィール紹介</h1>
     <p class="header__subtitle">ようこそ！ここはちょっと変わった自己紹介ページです</p>
   </header>
 
