--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <li class="profile__item"><span class="profile__label">誕生日：</span>2012年10月17日</li>
         </ul>
         <div class="profile__image-wrapper">
-          <img src="images/profile.jpg" alt="プロフィール画像" class="profile__image" />
+          <img src="images/profile.png" alt="プロフィール画像" class="profile__image" />
         </div>
       </div>
     </section>
